--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
+
 # .NET
 bin/
 obj/
@@ -8,66 +36,70 @@ obj/
 *.exe
 *.pdb
 *.log
+*.vspscc
+*.vssscc
 .vs/
 .vscode/
-*.DotSettings.user
+*.userprefs
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.opendb
+*.VC.db
+*.VC.VC.opendb
+project.lock.json
+project.fragment.lock.json
+artifacts/
 
-# Node
+# Node/React
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+dist/
+build/
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
 # Database
-*.db
-*.sqlite
 *.mdf
 *.ldf
 *.bak
+*.sql.bak
 
 # OS
 .DS_Store
 Thumbs.db
 *.swp
 *.swo
+*~
 
 # IDE
 .idea/
 *.iml
-
-# Build
-dist/
-build/
-publish/
-out/
-
-# Secrets
-appsettings.Development.json
-*.env
-secrets.json
-connection-strings.json
-*.pfx
-*.key
-
-# Data files (large datasets)
-database/data/kaggle/*.csv
-database/data/kaggle/*.json
-database/data/kaggle/*.xlsx
-database/data/kaggle/*.zip
-
-# Docker
-docker-compose.override.yml
-
-# Test results
-TestResults/
-coverage/
-*.trx
-*.coverage
+*.ipr
+*.iws
 
 # Logs
 logs/
 *.log
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Sensitive data
+appsettings.Development.json
+appsettings.Production.json
+*.pfx
+*.key
+secrets.json
+
+# Keep cleaned data but ignore raw large files
+database/data/raw/
+!database/data/cleaned/
