--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,11 @@ secrets.json
 # Keep cleaned data but ignore raw large files
 database/data/raw/
 !database/data/cleaned/
+
+# Environment variables and secrets
+.env
+.env.local
+.env.*.local
+appsettings.*.json
+!appsettings.json
+!appsettings.Development.json
