--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # SQL Server Database
@@ -49,7 +49,7 @@ services:
     container_name: fleet-frontend
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:5000/api
-      - NEXT_PUBLIC_GRAFANA_URL=http://grafana:3001
+      - NEXT_PUBLIC_GRAFANA_URL=http://localhost:3001
     ports:
       - "3000:3000"
     depends_on:
@@ -58,21 +58,50 @@ services:
       - fleet-network
     restart: unless-stopped
 
-  # Grafana for Monitoring
+  # Prometheus - Metrics Collection
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: fleet-prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.enable-lifecycle"
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-data:/prometheus
+    networks:
+      - fleet-network
+    restart: unless-stopped
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  # Grafana - Visualization
   grafana:
     image: grafana/grafana:latest
     container_name: fleet-grafana
     environment:
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=fleetadmin
       - GF_SERVER_ROOT_URL=http://localhost:3001
+      - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
     ports:
       - "3001:3000"
     volumes:
       - grafana-data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+      - ./monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
+    depends_on:
+      - prometheus
     networks:
       - fleet-network
     restart: unless-stopped
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   # Nginx Reverse Proxy
   nginx:
@@ -95,6 +124,7 @@ services:
 volumes:
   sqlserver-data:
   grafana-data:
+  prometheus-data:
 
 networks:
   fleet-network:
