--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,29 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@tanstack/react-query": "^5.17.19",
     "@tanstack/react-query-devtools": "^5.17.19",
     "axios": "^1.6.5",
-    "recharts": "^2.10.3",
+    "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
     "lucide-react": "^0.309.0",
-    "clsx": "^2.1.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.15.4",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
-    "zustand": "^4.4.7",
-    "sonner": "^1.3.1"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
